--- a/templates/front/default/heroes.html.twig
+++ b/templates/front/default/heroes.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base_front.html.twig' %}
 
-{% block title %}Héros{% endblock %}
+{% block title %}HeroCall - Liste des héros{% endblock %}
 
 {% block body %}
 {% block stylesheets %}
