--- a/templates/front/event/index.html.twig
+++ b/templates/front/event/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base_front.html.twig' %}
 
-{% block title %}Les évènements{% endblock %}
+{% block title %}HeroCall - Les évènements{% endblock %}
 
 {% block body %}
 <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
