--- a/templates/mailer/mission_assigned.html.twig
+++ b/templates/mailer/mission_assigned.html.twig
@@ -4,7 +4,7 @@
 +        Vous avez été assigné à une mission.
 +    </p>
 +    <p>
-+        <strong>Titre de la mission</strong>: {{mission.title}}
++        <strong>Titre de la mission</strong>: {{mission.name}}
 +    </p>
 +    <p>
 +        <strong>Description de la mission</strong>: {{mission.description}}
