--- a/templates/hero/index.html.twig
+++ b/templates/hero/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base_hero.html.twig' %}
 
-{% block title %}Dashboard - {{ hero.name }}!{% endblock %}
+{% block title %}Dashboard - {{ hero.name }}{% endblock %}
 
 {% block body %}
-<h1 class="text-3xl font-bold tracking-tight text-gray-900">Bienvenue {{ hero.name }} ! ✅</h1>
+<h1 class="text-3xl font-bold tracking-tight text-gray-900">Bienvenue {{ hero.name }} !</h1>
 
 <section class="bg-white">
   <div class="mx-auto max-w-screen-xl px-4 py-12 sm:px-6 md:py-16 lg:px-8">
