ajout lien pour le register hero

--- a/templates/base_back.html.twig
+++ b/templates/base_back.html.twig
@@ -43,7 +43,7 @@
 
 	<aside class="relative bg-sidebar h-screen w-64 hidden sm:block shadow-xl">
 		<div class="p-6">
-			<a href="index.html" class="text-white text-3xl font-semibold uppercase hover:text-gray-300"><img src="{{ asset('build/images/hero-call-logo.png') }}" class="h-8 mr-3" alt="Hero Call Logo" /></a>
+			<a href="/" class="text-white text-3xl font-semibold uppercase hover:text-gray-300"><img src="{{ asset('build/images/hero-call-logo.png') }}" class="h-8 mr-3" alt="Hero Call Logo" /></a>
 		</div>
 		<nav class="text-white text-base font-semibold pt-3">
 			<a href="/admin" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
