--- a/templates/registration/register_hero.html.twig
+++ b/templates/registration/register_hero.html.twig
@@ -3,6 +3,14 @@
 {% block title %}Inscription Héro{% endblock %}
 
 {% block body %}
+{% block stylesheets %}
+    {{ encore_entry_link_tags('app') }}
+{% endblock %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+{% endblock %}
+
     {% for flash_error in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
@@ -11,7 +19,7 @@
     <section class="bg-gray-50 dark:bg-gray-900 md:py-48">
         <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
             <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
-                <img class="w-24 mr-2" src="{{ asset('build/images/hero-call-logo.png') }}" alt="logo">  
+                <img class="h-8 mr-3" src="{{ asset('build/images/hero-call-logo.png') }}" alt="logo">  
             </a>
             <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
                 <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
