--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,7 +8,7 @@
     {% endfor %}
 
 
-    <section class="bg-gray-50 dark:bg-gray-900">
+    <section class="bg-gray-50 dark:bg-gray-900 py-20">
         <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
             <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
                 <img src="{{ asset('build/images/hero-call-logo.png') }}" class="h-8 mr-3" alt="Hero Call Logo" />  
@@ -29,6 +29,9 @@
                         <button type="submit" class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">S'inscrire</button>
                         <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                             Vous avez un compte ? <a href="/login" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Connectez-vous</a>
+                        </p>
+                        <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+                            Devenir héro ? <a href="/register-hero" class="font-medium text-primary-600 hover:underline dark:text-primary-500">C'est ici.</a>
                         </p>
                     {{ form_end(registrationForm) }}
                 </div>
