--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -56,6 +56,9 @@
                         <p class="text-sm font-light text-gray-500 dark:text-gray-400">
                             Vous n’avez pas de compte ? <a href="/register" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Inscrivez-vous</a>
                         </p>
+                        <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+                            Devenir héro ? <a href="/register-hero" class="font-medium text-primary-600 hover:underline dark:text-primary-500">C'est ici.</a>
+                        </p>
                     </form>
                 </div>
             </div>
