--- a/templates/front/default/index.html.twig
+++ b/templates/front/default/index.html.twig
@@ -382,7 +382,7 @@
               </div>
               <div class="flex avatar justify-center my-2">
                 <div class="w-40 rounded-full ring ring-gradient ring-offset-base-100 ring-offset-2">
-                  <img class="rounded-full" src="{{ bestHeroes[1].avatar }}" />
+                  <img class="rounded-full" src="{{ asset('uploads/avatar/' ~ bestHeroes[1].avatar) }}" />
                 </div>
               </div>
             </div>
@@ -399,7 +399,7 @@
               <div class="h-1 w-full gradient my-0 py-0 rounded-t"></div>
               <div class="flex avatar justify-center my-2">
                 <div class="w-48 rounded-full ring ring-gradient ring-offset-base-100 ring-offset-2">
-                  <img class="rounded-full" src="{{ bestHeroes[0].avatar }}" />
+                  <img class="rounded-full" src="{{ asset('uploads/avatar/' ~ bestHeroes[0].avatar) }}" />
                 </div>
               </div>
             </div>
@@ -417,7 +417,7 @@
               </div>
               <div class="flex avatar justify-center my-2">
                 <div class="w-40 rounded-full ring ring-gradient ring-offset-base-100 ring-offset-2">
-                  <img class="rounded-full" src="{{ bestHeroes[2].avatar }}" />
+                  <img class="rounded-full" src="{{ asset('uploads/avatar/' ~ bestHeroes[2].avatar) }}" />
                 </div>
               </div>
             </div>
